--- a/style.css
+++ b/style.css
@@ -209,3 +209,119 @@ p{
 
 }
 
+
+
+
+/* pagina de contacto */ 
+
+h1{
+    color: azure;
+   
+}
+
+form{
+    margin-left: auto;
+}
+
+
+
+
+form label {
+    color: aliceblue;
+    font-size: 14px;
+    font-weight: bolder;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+form input {
+    color: grey;
+    font-size: 14px;
+    font-weight: normal;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 65%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+form textarea {
+    color: grey;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+form p {
+    text-align: center;
+}
+
+form h5:hover {
+    color: green;
+
+}
+
+form label:hover {
+    color: red;
+
+}
+
+.form-control {
+    width: 70%;
+}
+
+.form-label {
+    font-weight: bold;
+    color: aliceblue;
+}
+
+.form-label1 {
+    color: darkslategray;
+    font-size: 15px;
+    font-family: cursive;
+    font-weight: bold;
+
+}
+
+.form-label1:hover {
+    color: green;
+
+}
+
+
+
+/*tipologias*/
+
+.titulo__tipologia{
+
+    color: aliceblue;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+h3{
+
+    color: aliceblue;
+}
+
+.contenedor__tipologias{
+    
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: center;
+        align-content: center;
+}
+
+@media only screen and (min-width:768px){
+    .contenedor__tipologias{
+
+        display: flex;
+        flex-direction: row;
+        
+    }
+
+}
