--- a/style.css
+++ b/style.css
@@ -321,6 +321,11 @@ h3{
 
         display: flex;
         flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: center;
+        align-content: center;
+}
         
     }
 
